bloodc/src/parser/snapshots/bloodc__parser__tests__fn_trait_no_return.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 14,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: Some(
                    TypeParams {
                        params: [
                            Type(
                                TypeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 15,
                                            end: 16,
                                            start_line: 1,
                                            start_col: 16,
                                        },
                                    },
                                    bounds: [
                                        Type {
                                            kind: Path(
                                                TypePath {
                                                    segments: [
                                                        TypePathSegment {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 3,
                                                                },
                                                                span: Span {
                                                                    start: 18,
                                                                    end: 23,
                                                                    start_line: 1,
                                                                    start_col: 19,
                                                                },
                                                            },
                                                            args: Some(
                                                                TypeArgs {
                                                                    args: [
                                                                        Type(
                                                                            Type {
                                                                                kind: Tuple(
                                                                                    [],
                                                                                ),
                                                                                span: Span {
                                                                                    start: 23,
                                                                                    end: 25,
                                                                                    start_line: 1,
                                                                                    start_col: 24,
                                                                                },
                                                                            },
                                                                        ),
                                                                        Type(
                                                                            Type {
                                                                                kind: Path(
                                                                                    TypePath {
                                                                                        segments: [
                                                                                            TypePathSegment {
                                                                                                name: Spanned {
                                                                                                    node: SymbolU32 {
                                                                                                        value: 4,
                                                                                                    },
                                                                                                    span: Span {
                                                                                                        start: 29,
                                                                                                        end: 30,
                                                                                                        start_line: 1,
                                                                                                        start_col: 30,
                                                                                                    },
                                                                                                },
                                                                                                args: None,
                                                                                            },
                                                                                        ],
                                                                                        span: Span {
                                                                                            start: 29,
                                                                                            end: 30,
                                                                                            start_line: 1,
                                                                                            start_col: 30,
                                                                                        },
                                                                                    },
                                                                                ),
                                                                                span: Span {
                                                                                    start: 29,
                                                                                    end: 30,
                                                                                    start_line: 1,
                                                                                    start_col: 30,
                                                                                },
                                                                            },
                                                                        ),
                                                                    ],
                                                                    span: Span {
                                                                        start: 23,
                                                                        end: 30,
                                                                        start_line: 1,
                                                                        start_col: 24,
                                                                    },
                                                                },
                                                            ),
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 18,
                                                        end: 30,
                                                        start_line: 1,
                                                        start_col: 19,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 18,
                                                end: 30,
                                                start_line: 1,
                                                start_col: 19,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        start: 15,
                                        end: 30,
                                        start_line: 1,
                                        start_col: 16,
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 14,
                            end: 31,
                            start_line: 1,
                            start_col: 15,
                        },
                    },
                ),
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 5,
                                    },
                                    span: Span {
                                        start: 32,
                                        end: 33,
                                        start_line: 1,
                                        start_col: 33,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 32,
                                end: 33,
                                start_line: 1,
                                start_col: 33,
                            },
                        },
                        ty: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 2,
                                                },
                                                span: Span {
                                                    start: 35,
                                                    end: 36,
                                                    start_line: 1,
                                                    start_col: 36,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 35,
                                        end: 36,
                                        start_line: 1,
                                        start_col: 36,
                                    },
                                },
                            ),
                            span: Span {
                                start: 35,
                                end: 36,
                                start_line: 1,
                                start_col: 36,
                            },
                        },
                        span: Span {
                            start: 32,
                            end: 36,
                            start_line: 1,
                            start_col: 33,
                        },
                    },
                ],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: None,
                        span: Span {
                            start: 38,
                            end: 40,
                            start_line: 1,
                            start_col: 39,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 40,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 40,
        start_line: 1,
        start_col: 1,
    },
}
