bloodc/src/parser/snapshots/bloodc__parser__tests__fn_trait_syntax.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 9,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: Some(
                    TypeParams {
                        params: [
                            Type(
                                TypeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 10,
                                            end: 11,
                                            start_line: 1,
                                            start_col: 11,
                                        },
                                    },
                                    bounds: [
                                        Type {
                                            kind: Path(
                                                TypePath {
                                                    segments: [
                                                        TypePathSegment {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 3,
                                                                },
                                                                span: Span {
                                                                    start: 13,
                                                                    end: 18,
                                                                    start_line: 1,
                                                                    start_col: 14,
                                                                },
                                                            },
                                                            args: Some(
                                                                TypeArgs {
                                                                    args: [
                                                                        Type(
                                                                            Type {
                                                                                kind: Tuple(
                                                                                    [
                                                                                        Type {
                                                                                            kind: Reference {
                                                                                                lifetime: None,
                                                                                                mutable: false,
                                                                                                inner: Type {
                                                                                                    kind: Path(
                                                                                                        TypePath {
                                                                                                            segments: [
                                                                                                                TypePathSegment {
                                                                                                                    name: Spanned {
                                                                                                                        node: SymbolU32 {
                                                                                                                            value: 4,
                                                                                                                        },
                                                                                                                        span: Span {
                                                                                                                            start: 20,
                                                                                                                            end: 21,
                                                                                                                            start_line: 1,
                                                                                                                            start_col: 21,
                                                                                                                        },
                                                                                                                    },
                                                                                                                    args: None,
                                                                                                                },
                                                                                                            ],
                                                                                                            span: Span {
                                                                                                                start: 20,
                                                                                                                end: 21,
                                                                                                                start_line: 1,
                                                                                                                start_col: 21,
                                                                                                            },
                                                                                                        },
                                                                                                    ),
                                                                                                    span: Span {
                                                                                                        start: 20,
                                                                                                        end: 21,
                                                                                                        start_line: 1,
                                                                                                        start_col: 21,
                                                                                                    },
                                                                                                },
                                                                                            },
                                                                                            span: Span {
                                                                                                start: 19,
                                                                                                end: 21,
                                                                                                start_line: 1,
                                                                                                start_col: 20,
                                                                                            },
                                                                                        },
                                                                                    ],
                                                                                ),
                                                                                span: Span {
                                                                                    start: 18,
                                                                                    end: 22,
                                                                                    start_line: 1,
                                                                                    start_col: 19,
                                                                                },
                                                                            },
                                                                        ),
                                                                        Type(
                                                                            Type {
                                                                                kind: Path(
                                                                                    TypePath {
                                                                                        segments: [
                                                                                            TypePathSegment {
                                                                                                name: Spanned {
                                                                                                    node: SymbolU32 {
                                                                                                        value: 5,
                                                                                                    },
                                                                                                    span: Span {
                                                                                                        start: 26,
                                                                                                        end: 30,
                                                                                                        start_line: 1,
                                                                                                        start_col: 27,
                                                                                                    },
                                                                                                },
                                                                                                args: None,
                                                                                            },
                                                                                        ],
                                                                                        span: Span {
                                                                                            start: 26,
                                                                                            end: 30,
                                                                                            start_line: 1,
                                                                                            start_col: 27,
                                                                                        },
                                                                                    },
                                                                                ),
                                                                                span: Span {
                                                                                    start: 26,
                                                                                    end: 30,
                                                                                    start_line: 1,
                                                                                    start_col: 27,
                                                                                },
                                                                            },
                                                                        ),
                                                                    ],
                                                                    span: Span {
                                                                        start: 18,
                                                                        end: 30,
                                                                        start_line: 1,
                                                                        start_col: 19,
                                                                    },
                                                                },
                                                            ),
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 13,
                                                        end: 30,
                                                        start_line: 1,
                                                        start_col: 14,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 13,
                                                end: 30,
                                                start_line: 1,
                                                start_col: 14,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        start: 10,
                                        end: 30,
                                        start_line: 1,
                                        start_col: 11,
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 9,
                            end: 31,
                            start_line: 1,
                            start_col: 10,
                        },
                    },
                ),
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 6,
                                    },
                                    span: Span {
                                        start: 32,
                                        end: 33,
                                        start_line: 1,
                                        start_col: 33,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 32,
                                end: 33,
                                start_line: 1,
                                start_col: 33,
                            },
                        },
                        ty: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 2,
                                                },
                                                span: Span {
                                                    start: 35,
                                                    end: 36,
                                                    start_line: 1,
                                                    start_col: 36,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 35,
                                        end: 36,
                                        start_line: 1,
                                        start_col: 36,
                                    },
                                },
                            ),
                            span: Span {
                                start: 35,
                                end: 36,
                                start_line: 1,
                                start_col: 36,
                            },
                        },
                        span: Span {
                            start: 32,
                            end: 36,
                            start_line: 1,
                            start_col: 33,
                        },
                    },
                ],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: None,
                        span: Span {
                            start: 38,
                            end: 40,
                            start_line: 1,
                            start_col: 39,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 40,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 40,
        start_line: 1,
        start_col: 1,
    },
}
